testcases/neg/sem/nil_seq_mid.tig
/* error: type of NilExp cannot be infered */
(1;2;nil;4)
